updated tab name and header to reflect my name

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My cool site.</title>
+    <title>Julia Z Byron</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Here's some content.</h1>
-
+    <h1>Julia Z Byron</h1>
+    <p>My Skillz</p>
     <img src="img/Andy-Goldsworthy-Rowan-leaves.jpg">
 </body>
 </html>
