added divs for each planned section, removed placeholder background image

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <title>Julia Z Byron</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <h1>Julia Z Byron</h1>
-    <p>My Skillz</p>
-    <img src="img/Andy-Goldsworthy-Rowan-leaves.jpg">
+
+	<div>
+	    <h1>Julia Z Byron</h1>
+	</div>
+
+	<div>
+		<li>navigation</li>
+	</div>
+
+	<div>
+		<p>Here is where I'll tell you what I can do</p>
+	</div>
+
+	<div>
+		<p>There will be thumbnails of projects here</p>
+	</div>
+    
+    <img src="">
 </body>
 </html>
