added section IDs, modified sections

--- a/index.html
+++ b/index.html
@@ -7,20 +7,38 @@
 
 <body>
 
-	<div>
+	<div class="header">
+
+		<nav>
+			
+			<ul>
+				<li> <a href="#">Home</a> </li>
+				<li> <a href="#">About</a> </li>
+				<li> <a href="#">Projects</a> </li>
+				<li> <a href="#">Contact</a> </li>
+			</ul>
+
+		</nav>
+
+	</div>
+
+
+	<div id="home" class="container">
+
 	    <h1>Julia Z Byron</h1>
+
 	</div>
 
-	<div>
-		<li>navigation</li>
-	</div>
-
-	<div>
+	<div id ="about" class="container">
 		<p>Here is where I'll tell you what I can do</p>
 	</div>
 
-	<div>
+	<div id="projects" class="container">
 		<p>There will be thumbnails of projects here</p>
+	</div>
+
+	<div id="contact">
+		<p>Talk to me!</p>
 	</div>
     
     <img src="">
