changed typography & background

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Julia Z Byron</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="//use.typekit.net/vcq4jnt.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 
 <body>
@@ -25,12 +27,14 @@
 
 	<div id="home" class="container">
 
-	    <h1>Julia Z Byron</h1>
+	    <h1>JULIA Z BYRON</h1>
 
 	</div>
 
 	<div id ="about" class="container">
-		<p>Here is where I'll tell you what I can do</p>
+		<p>Coming from a background in industrial design, I've switched gears into the tech industry. Wherever I may find myself, what persists is a passion for using a holistic, empathic approach to addressing real world problems through user-centric research and design.
+
+		At my current position at IBM, I am pushing to establish the practice of design and user research from the ground up in an engineering-driven culture. I've established user research on my team by setting up a user feedback program, research processes and education for the greater team. Now that that is off the ground and running, I am designing in addition to  researching on our mobile backend services platform. I love the challenge of advocating for these efforts and ensuring our users' needs manifest in the final product.</p>
 	</div>
 
 	<div id="projects" class="container">
