changed div size to rem, aligned and fixed header, outlined project divs

--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
 		At my current position at IBM, I am pushing to establish the practice of design and user research from the ground up in an engineering-driven culture. I've established user research on my team by setting up a user feedback program, research processes and education for the greater team. Now that that is off the ground and running, I am designing in addition to  researching on our mobile backend services platform. I love the challenge of advocating for these efforts and ensuring our users' needs manifest in the final product.</p>
 	</div>
 
-	<div id="projects" class="container">
-		<p>There will be thumbnails of projects here</p>
+	<div id="portfolio" class="container">
+		<h2>Projects</h2>
+		<div class="projects"> 1</div>
+		<div class="projects"> 2</div>
+		<div class="projects"> 3</div>
+		<div class="projects"> 4</div>
+		<!-- <div id="project-1" class="projects"> </div>
+		<div id="project-2" class="projects"> -->
 	</div>
 
 	<div id="contact">
