Added mobile app lifecycle page and image, created divs for projects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<nav>
 			
 			<ul>
-				<li> <a href="#">Home</a> </li>
+				<li> <a href="index.html">Home</a> </li>
 				<li> <a href="#">About</a> </li>
 				<li> <a href="#">Projects</a> </li>
 				<li> <a href="#">Contact</a> </li>
@@ -32,6 +32,7 @@
 	</div>
 
 	<div id ="about" class="container">
+		<h2>About me</h2>
 		<p>Coming from a background in industrial design, I've switched gears into the tech industry. Wherever I may find myself, what persists is a passion for using a holistic, empathic approach to addressing real world problems through user-centric research and design.
 
 		At my current position at IBM, I am pushing to establish the practice of design and user research from the ground up in an engineering-driven culture. I've established user research on my team by setting up a user feedback program, research processes and education for the greater team. Now that that is off the ground and running, I am designing in addition to  researching on our mobile backend services platform. I love the challenge of advocating for these efforts and ensuring our users' needs manifest in the final product.</p>
@@ -39,8 +40,22 @@
 
 	<div id="portfolio" class="container">
 		<h2>Projects</h2>
-		<div class="projects"> 1</div>
-		<div class="projects"> 2</div>
+		<div class="projects">
+			<a href="mobile_app_lifecycle.html"> 
+				<div class="project-img mobile_app_lc"></div>
+			</a>
+			<a href="mobile_app_lifecycle.html">
+				<h3>Mobile App Lifecycle</h3>
+			</a>
+		</div>
+
+		<div class="projects">
+			<a href="#"> 
+				<div class="project-img user_fdbck_prog"></div>
+			</a>
+			<h3>User Feedback Program</h3>
+		</div>
+		
 		<div class="projects"> 3</div>
 		<div class="projects"> 4</div>
 		<!-- <div id="project-1" class="projects"> </div>
