added images for all projects. styled through project_img class

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<h2>Projects</h2>
 		<div class="projects">
 			<a href="mobile_app_lifecycle.html"> 
-				<div class="project-img mobile_app_lc"></div>
+				<div class="project_img mobile_app_lc"></div>
 			</a>
 			<a href="mobile_app_lifecycle.html">
 				<h3>Mobile App Lifecycle</h3>
@@ -50,14 +50,31 @@
 		</div>
 
 		<div class="projects">
-			<a href="#"> 
-				<div class="project-img user_fdbck_prog"></div>
+			<a href="usr_fdbck_prog.html"> 
+				<div class="project_img user_fdbck_prog"></div>
 			</a>
+			<a href="usr_fdbck_prog.html">
 			<h3>User Feedback Program</h3>
+			</a>
 		</div>
 		
-		<div class="projects"> 3</div>
-		<div class="projects"> 4</div>
+		<div class="projects"> 
+			<a href="tm_bsd_prsnas.html">
+				<div class="project_img tm_bsd_prsnas"></div>
+			</a>
+			<a href="tm_bsd_prsnas.html">
+				<h3>Team-based Personas</h3>
+			</a>
+		</div>
+
+		<div class="projects">
+			<a href="rapd_proto_tool.html">
+				<div class="project_img rapd_proto_tool"></div>
+			</a>
+			<a href="rapd_proto_tool.html">
+				<h3>Rapid Prototyping Tool</h3>
+			</a>
+		</div>
 		<!-- <div id="project-1" class="projects"> </div>
 		<div id="project-2" class="projects"> -->
 	</div>
